--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
   <title>Facebook Login Page</title>
 </head>
@@ -65,9 +66,70 @@
   </main>
 
   <footer>
-    <div class="languages">
-      
+    <div class="footer_wrapper">
+      <div class="container">
+        <div class="content-wrapper">
+          <div class="content">
+            <div class="languages">
+              <ul>
+                <li>English (UK)</li>
+                <li><a href="https://ar-ar.facebook.com/">العربية</a></li>
+                <li><a href="https://fr-fr.facebook.com/">Français (France)</a></li>
+                <li><a href="https://de-de.facebook.com/">Deutsch</a></li>
+                <li><a href="https://es-la.facebook.com/">Español</a></li>
+                <li><a href="https://ru-ru.facebook.com/">Русский</a></li>
+                <li><a href="https://pt-br.facebook.com/">Português (Brasil)</a></li>
+                <li><a href="https://it-it.facebook.com/">Italiano</a></li>
+                <li><a href="https://hi-in.facebook.com/">हिन्दी</a></li>
+                <li><a href="https://zh-cn.facebook.com/">中文(简体)</a></li>
+                <li><a href="https://ja-jp.facebook.com/">日本語</a></li>
+              </ul>
+            </div>
+    
+            <div class="separator"></div>
+            <div class="services">
+              <ul>
+                <li><a href="https://www.facebook.com/reg/">Sign Up</a></li>
+                <li><a href="https://www.facebook.com/login/">Log In</a></li>
+                <li><a href="https://messenger.com/">Messenger</a></li>
+                <li><a href="https://www.facebook.com/lite/">Facebook Lite</a></li>
+                <li><a href="https://www.facebook.com/watch/">Watch</a></li>
+                <li><a href="https://www.facebook.com/places/">Places</a></li>
+                <li><a href="https://www.facebook.com/games/">Games</a></li>
+                <li><a href="https://www.facebook.com/marketplace/">Marketplace</a></li>
+                <li><a href="https://pay.facebook.com/">Facebook Pay</a></li>
+                <li><a href="https://www.oculus.com/">Oculus</a></li>
+                <li><a href="https://portal.facebook.com/">Portal</a></li>
+                <li><a href="https://www.instagram.com/">Instagram</a></li>
+                <li><a href="https://www.bulletin.com/">Bulletin</a></li>
+                <li><a href="https://www.facebook.com/local/lists/245019872666104/">Local</a></li>
+                <li><a href="https://www.facebook.com/fundraisers/">Fundraisers</a></li>
+                <li><a href="https://www.facebook.com/biz/directory/">Services</a></li>
+                <li><a href="https://www.facebook.com/votinginformationcenter/?entry_point=c2l0ZQ%3D%3D">Voting Information Centre</a></li>
+                <li><a href="https://www.facebook.com/groups/explore/">Groups</a></li>
+                <li><a href="https://about.facebook.com/">About</a></li>
+                <li><a href="https://www.facebook.com/ad_campaign/landing.php?placement=pflo&campaign_id=402047449186&nav_source=unknown&extra_1=auto">Create ad</a></li>
+                <li><a href="https://www.facebook.com/pages/create/?ref_type=site_footer">Create Page</a></li>
+                <li><a href="https://developers.facebook.com/?ref=pf">Developers</a></li>
+                <li><a href="https://www.facebook.com/careers/?ref=pf">Careers</a></li>
+                <li><a href="https://www.facebook.com/privacy/explanation/">Privacy</a></li>
+                <li><a href="https://www.facebook.com/policies/cookies/">Cookies</a></li>
+                <li><a href="https://www.facebook.com/help/568137493302217">AdChoices</a></li>
+                <li><a href="https://www.facebook.com/policies?ref=pf">Terms</a></li>
+                <li><a href="https://www.facebook.com/help/?ref=pf">Help</a></li>
+              </ul>
+            </div>
+            <div class="copy-right">
+              Meta &copy;
+            </div>
+          </div>
+  
+  
+  
+        </div>
+      </div>
     </div>
+
   </footer>
   
 
